<resources>
    <string name="app_name">可达性数据收集系统</string>
    <string name="logUser">账号：</string>
    <string name="inputPhone">请输入手机号码</string>
    <string name="logPassword">密码：</string>
    <string name="inputPassword">请输入密码</string>
    <string name="forgetPassword">忘记密码</string>
    <string name="rememberPassword">记住密码</string>
    <string name="login">登录</string>
    <string name="inputNewPassword">输入新密码</string>
    <string name="inputNewPasswordHint">请输入新密码</string>
    <string name="confirmNewPassword">确认新密码</string>
    <string name="inputNewPasswordAgain">请再次输入新密码</string>
    <string name="verifyCode">验证码：</string>
    <string name="inputVerifyCode">请输入验证码</string>
    <string name="getVerifyCode">获取验证码</string>
    <string name="done">确定</string>
    <string name="location_permission">GPS位置权限</string>
    <string name="camera_permission">相机权限</string>
    <string name="wifi_permission">WiFi网络权限</string>
</resources>