<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffffff">

    <!--顶部返回栏-->
    <LinearLayout
        android:id="@+id/backLayout"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:gravity="center">
        <ImageView
            android:id="@+id/backImage"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/back"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:text="可达性数据收集"
        android:textColor="#5B6A4B"
        android:textSize="40sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/itemLayoutHeight"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvUsername"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/logUser"
            android:textColor="#000000"
            android:textSize="@dimen/commonSize" />

        <EditText
            android:id="@+id/etvUsername"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="3"
            android:background="@drawable/edit_selector"
            android:hint="@string/inputPhone"
            android:inputType="text"
            android:textColor="#000000"
            android:textColorHint="#A8A8A8"
            android:textSize="@dimen/commonSize" />
            <!--记得定制一个drawable-->
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/itemLayoutHeight"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvPassword"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/logPassword"
            android:textColor="#000000"
            android:textSize="@dimen/commonSize" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3">

            <EditText
                android:id="@+id/etvPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/edit_selector"
                android:hint="@string/inputPassword"
                android:inputType="textWebPassword"
                android:textColor="#000000"
                android:textColorHint="#A8A8A8"
                android:textSize="@dimen/commonSize" />

            <Button
                android:id="@+id/btForget"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:text="@string/forgetPassword"
                android:textColor="#000000"
                android:textSize="@dimen/commonSize" />
        </RelativeLayout>
    </LinearLayout>

   <!-- <CheckBox
        android:id="@+id/ckRemember"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rememberPassword"
        android:textColor="#000000"
        android:textSize="@dimen/commonSize" />-->

    <Button
        android:id="@+id/jumpGps"
        style="@style/button_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="140dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="140dp"
        android:text="@string/login" />

    <Button
        android:id="@+id/jumpSignUp"
        style="@style/button_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="140dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="140dp"
        android:text="注册" />

    <Button
        android:id="@+id/jumpFirst"
        style="@style/button_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="140dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="140dp"
        android:text="返回首页" />
</LinearLayout>